# zsh-backup-mac

./: .aliases  .gitignore  .zshenv  .zshrc  README.md  aliases  gitconfig  gitignore  install.sh  zshenv  zshrc
.zsh/.zsh/go/gemini/: go.mod
.zsh/.zsh/python/: jupyter_header.py
.zsh/.zsh/python/claude/: README.md
.zsh/.zsh/scripts/: backup.sh
.zsh/go/gemini/: gemini.go
.zsh/python/: get_decimal.py
.zsh/scripts/: backup.sh
config/zellij/: config.kdl
config/zellij/layouts/: 2x2.kdl  2x4.kdl  4x2.kdl
zsh/.zsh/python/: get_canonical.py
zsh/.zsh/scripts/: backup.sh  install-omz-plugins.sh
zsh/python/: get_canonical.py  get_decimal.py
zsh/python/claude/: pyproject.toml  query_claude.py
zsh/scripts/: backup.sh  install-omz-plugins.sh
